--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t the-good-boy/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run the-good-boy/docker-react npm run test -- --coverage
+  - docker run -r CI=true the-good-boy/docker-react npm run test 
