--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ deploy:
   bucket_name: "elasticbeanstalk-us-east-2-667100961098"
   bucket_path: "docker-react"
   on:
-    branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+    branch: main
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
