--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
   bucket_name: "elasticbeanstalk-us-east-2-667100961098"
   bucket_path: "docker-react"
   on:
-    branch: main
+    branch: master
   access_key_id: "$AWS_ACCESS_KEY"
   secret_access_key: "$AWS_SECRET_KEY"
