--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,10 +1,12 @@
 FROM node:alpine
 
-WORKDIR '/app'
+USER node
 
-COPY package.json .
+RUN mkdir -p /home/node/app
+WORKDIR /home/node/app
+
+COPY --chown=node:node ./package.json ./
 RUN npm install
-
-COPY . .
+COPY --chown=node:node ./ ./
 
 CMD ["npm", "run", "start"]
