--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/app
+      - /home/node/app/node_modules
+      - .:/home/node/app
   tests:
     build: 
       context: .
