--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,9 @@
 version: '3'
 services:
   web:
+    stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     build: 
       context: .
       dockerfile: Dockerfile.dev
@@ -10,9 +13,11 @@ services:
       - /home/node/app/node_modules
       - .:/home/node/app
   tests:
+    stdin_open: true
     build: 
       context: .
       dockerfile: Dockerfile.dev
     volumes:
-      - .:/app
+      - /home/node/app/node_modules
+      - .:/home/node/app
     command: ["npm", "run", "test"]
